# imageconvert

./: .gitignore  CMakeLists.txt  DropIndicator.cpp  DropIndicator.h  Info.plist  Makefile  README.md  imageconvert.pro  main.cpp
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml  cmake-multi-platform.yml
src/: DropIndicator.h  main.cpp
